--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,7 +1,7 @@
 .main {
   display: flex;
   justify-content: right;
-  align-items: center;
+  align-items: end;
   height: 100vh;
   width: 100vw;
   background: #00f;
